# alg_vis

./: CMakeLists.txt  Color_256.cpp  Color_256.h  Custom_plane_detection.cpp  Custom_plane_detection.h  Horizontal_plane_detection.cpp  Horizontal_plane_detection.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  PCA_fitting.cpp  PCA_fitting.h  PolyhedralSurf_rings.h  README  Ridge_detection.cpp  Ridge_detection.h  Scene.cpp  Scene.h  Settings_dialog.cpp  Settings_dialog.h  Settings_dialog.ui  Shape_detection.cpp  Shape_detection.h  Surface_simplification.cpp  Surface_simplification.h  Symmetric_normal_detection.cpp  Symmetric_normal_detection.h  Unit_normal_detection.cpp  Unit_normal_detection.h  Viewer.cpp  Viewer.h  alg_vis.cpp  alg_vis.qrc  demo_playground.cpp  demo_playground.qrc  dialSettings.cpp  dialSettings.h  (+7 more)
resources/: about.html  alg_vis.html
